feat(doctor-dashboard): enhance prescription impact visualization and clean UI